--- a/Pytorch model testing.ipynb
+++ b/Pytorch model testing.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert batch sentence to tokens"
+    "## Modeling"
    ]
   },
   {
@@ -46,161 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_sentences = [\"Hello I'm a single sentence\",\n",
-    "                   \"And another sentence\",\n",
-    "                   \"And the very very last one\"]\n",
-    "encoded_inputs = tokenizer(batch_sentences, padding=True, return_tensors=\"pt\", add_special_tokens=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input_ids': tensor([[    1,  6368,  1675, 17963,  1979,  1545,  7512,  8090,  9595, 10483,\n",
-       "             2],\n",
-       "        [    1,  1662,  7076,  8090,  9595, 10483,     2,     0,     0,     0,\n",
-       "             0],\n",
-       "        [    1,  1662,  1499,  6318,  6318,  6975,  3777,     2,     0,     0,\n",
-       "             0]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "        [1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0],\n",
-       "        [1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0]])}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "encoded_inputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Modeling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from Code.model import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = BertClassifier()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CLS] hello i [UNK] m a single sentence [SEP]\n",
-      "[CLS] and another sentence [SEP] [PAD] [PAD] [PAD] [PAD]\n",
-      "[CLS] and the very very last one [SEP] [PAD] [PAD] [PAD]\n"
-     ]
-    }
-   ],
-   "source": [
-    "batch_sentences = [\"Hello I'm a single sentence\",\n",
-    "                   \"And another sentence\",\n",
-    "                   \"And the very very last one\"]\n",
-    "encoded_inputs = tokenizer(batch_sentences, padding=True, return_tensors=\"pt\", add_special_tokens=True)\n",
-    "for ids in encoded_inputs[\"input_ids\"]:\n",
-    "    print(tokenizer.decode(ids))\n",
-    "input_tensor = encoded_inputs[\"input_ids\"]\n",
-    "padding_mask = encoded_inputs['attention_mask']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[    1,  6368,  1675, 17963,  1979,  1545,  7512,  8090,  9595, 10483,\n",
-       "             2],\n",
-       "        [    1,  1662,  7076,  8090,  9595, 10483,     2,     0,     0,     0,\n",
-       "             0],\n",
-       "        [    1,  1662,  1499,  6318,  6318,  6975,  3777,     2,     0,     0,\n",
-       "             0]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "padding_mask\n",
-    "encoded_inputs[\"input_ids\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3, 11)\n"
-     ]
-    }
-   ],
-   "source": [
-    "output = model(input_tensor)\n",
-    "print(output.detach().numpy().shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.5048, grad_fn=<MulBackward0>)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_true = output\n",
-    "mask_BCE_loss(y_true, output, padding_mask)"
    ]
   },
   {
@@ -215,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,8 +85,8 @@
     "\n",
     "class AMLDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, data_path='./data/training_set/', model_path='./pytorch-ernie'):\n",
-    "#         self.paths = glob.glob(data_path+\"*.txt\")\n",
-    "        self.paths = glob.glob(data_path+\"108.txt\")+glob.glob(data_path+\"209.txt\")+glob.glob(data_path+\"1.txt\")\n",
+    "        self.paths = glob.glob(data_path+\"*.txt\")\n",
+    "#         self.paths = glob.glob(data_path+\"108.txt\")+glob.glob(data_path+\"209.txt\")+glob.glob(data_path+\"1.txt\")\n",
     "        self.tokenizer = BertTokenizer.from_pretrained('./pytorch-ernie', do_lower_case = True)\n",
     "        \n",
     "    def __len__(self):\n",
@@ -243,17 +98,19 @@
     "        with open(path, encoding = 'utf-8') as f:\n",
     "            text = f.read().split('\\n')\n",
     "            target = \" \".join(ast.literal_eval(text[0]))\n",
-    "            print(target)\n",
     "            input_data = \"\".join(text[1:])\n",
-    "            input_data = re.sub(r'[A-Za-z]','', input_data)\n",
+    "#             input_data = re.sub(r'[A-Za-z]','', input_data)\n",
     "            # remove punctuation\n",
-    "            punctuation_characters = punctuation+'。、·「」！，）：（【】'\n",
-    "            input_data = input_data.translate(str.maketrans('', '',punctuation_characters ))\n",
+    "#             punctuation_characters = punctuation+'。、·「」！，）：（【】'\n",
+    "#             input_data = input_data.translate(str.maketrans('', '',punctuation_characters ))\n",
     "            # remove space\n",
-    "            input_data = input_data.replace(' ','')\n",
+    "#             input_data = input_data.replace(' ','')\n",
+    "\n",
+    "            # remove data without context\n",
+    "            if len(input_data) < 10:\n",
+    "                target = ''\n",
     "        return input_data, target\n",
     "        \n",
-    "\n",
     "def convert_batch_token_target(batch_input_data, batch_target):\n",
     "    batch_input_data = [chinese_converter.to_simplified(d) for d in batch_input_data]\n",
     "    input_tensor = tokenizer(batch_input_data, padding=True, return_tensors=\"pt\", add_special_tokens=False)\n",
@@ -261,10 +118,12 @@
     "    batch_target = process_target(input_token, batch_target)\n",
     "    return  input_token, padding_mask, torch.tensor(batch_target)\n",
     "\n",
+    "# process target binary array\n",
     "def process_target(input_token, batch_target):\n",
     "    targets = []\n",
     "    for slice_token, names in zip(input_token, batch_target):\n",
-    "        text = tokenizer.decode(slice_token, clean_up_tokenization_spaces=False).split(' ')\n",
+    "#         text = tokenizer.decode(slice_token, clean_up_tokenization_spaces=False).split(' ')\n",
+    "        text = tokenizer.convert_ids_to_tokens(slice_token)\n",
     "        target = [0]*len(text)\n",
     "        for name in names.split(\" \"):\n",
     "            name = chinese_converter.to_simplified(name)\n",
@@ -273,12 +132,49 @@
     "                    target[i:i+len(name)] = [1]*len(name)\n",
     "        targets.append(target)\n",
     "    return targets\n",
-    "                    "
+    "\n",
+    "# map binary prediction to text\n",
+    "def map_batch_prediction_to_text(input_tokens, predictions):\n",
+    "    batch_text_prediction = []\n",
+    "    for slice_token, prediction in zip(input_tokens, predictions):\n",
+    "#         text = tokenizer.decode(slice_token, clean_up_tokenization_spaces=True).split(' ')\n",
+    "        text = tokenizer.convert_ids_to_tokens(slice_token)\n",
+    "        text_prediction = []\n",
+    "        name = ''\n",
+    "        for t, p in zip(text, prediction):\n",
+    "            if p==0:\n",
+    "                if name != '':\n",
+    "                    text_prediction.append(name)\n",
+    "                name = ''\n",
+    "            else:\n",
+    "                name += t\n",
+    "        batch_text_prediction.append(text_prediction)\n",
+    "    return [list(set(p)) for p in batch_text_prediction]\n",
+    "\n",
+    "def split_data(token_tensor, mask_tensor, target_tensor, max_length):\n",
+    "    bs, seq = token_tensor.size()\n",
+    "    output_token_tensor = []\n",
+    "    output_mask_tensor = []\n",
+    "    output_target_tensor = []\n",
+    "    for i in range(int(np.ceil(seq/max_length))):\n",
+    "        output_token_tensor.append(token_tensor[:,i*max_length:(i+1)*max_length])\n",
+    "        output_mask_tensor.append(mask_tensor[:,i*max_length:(i+1)*max_length])\n",
+    "        output_target_tensor.append(target_tensor[:,i*max_length:(i+1)*max_length])\n",
+    "    return output_token_tensor, output_mask_tensor, output_target_tensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = torch.nn.functional.binary_cross_entropy_with_logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -297,19 +193,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "彭振源 王澤生 楚瑞芳\n",
-      "\n",
-      "陳淳伍\n",
-      "torch.Size([3, 1330]) torch.Size([3, 1330]) torch.Size([3, 1330])\n"
+      "==0==\n",
+      "torch.Size([4, 1199]) torch.Size([4, 1199]) torch.Size([4, 1199])\n",
+      "0.16936317086219788\n",
+      "map_batch_prediction_to_text: [[], ['状', '9', '发', '不断发'], [], []]\n",
+      "0.06426649540662766\n",
+      "map_batch_prediction_to_text: [[], [], ['使', '支持', '接', '7', '，'], []]\n",
+      "0.009261282160878181\n",
+      "map_batch_prediction_to_text: [[], [], [], []]\n",
+      "==1==\n",
+      "torch.Size([4, 4536]) torch.Size([4, 4536]) torch.Size([4, 4536])\n",
+      "0.03999470919370651\n",
+      "map_batch_prediction_to_text: [[], [], [], []]\n",
+      "0.011447896249592304\n",
+      "map_batch_prediction_to_text: [[], [], [], []]\n",
+      "0.004872215911746025\n",
+      "map_batch_prediction_to_text: [[], [], [], []]\n",
+      "0.004220792092382908\n",
+      "map_batch_prediction_to_text: [[], [], [], []]\n",
+      "0.0037228211294859648\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-5738f3563d7f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmask_BCE_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding_mask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap_batch_prediction_to_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"map_batch_prediction_to_text:\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    148\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m         \"\"\"\n\u001b[0;32m--> 150\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "for d, t in dataloader:\n",
+    "model.train()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-5)\n",
+    "for idx, (d, t) in enumerate(dataloader):\n",
+    "    print('=={}=='.format(idx))\n",
     "    d, m, t = convert_batch_token_target(list(d), list(t))\n",
     "    print(d.size(), m.size(), t.size())\n",
-    "    break"
+    "    split_d, split_m, split_t = split_data(d, m, t, 512)\n",
+    "    for (d, m), t in zip(zip(split_d, split_m), split_t):\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(d)\n",
+    "        loss = mask_BCE_loss(y_pred = output.float(), y_true = t.float(), padding_mask = m.float())\n",
+    "        print(loss.item())\n",
+    "        loss.backward()\n",
+    "        prediction = map_batch_prediction_to_text(d, output.round())\n",
+    "        print(\"map_batch_prediction_to_text:\",prediction)\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
