--- a/code/AML1.0.ipynb
+++ b/code/AML1.0.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,8 @@
       "[epoch 2] loss: 0.466\n",
       "[epoch 3] loss: 0.310\n",
       "[epoch 4] loss: 0.282\n",
-      "[epoch 5] loss: 0.226\n"
+      "[epoch 5] loss: 0.226\n",
+      "[epoch 6] loss: 0.173\n"
      ]
     }
    ],
