--- a/code/AML.ipynb
+++ b/code/AML.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Installation\n",
-    "Clone the repo to your local machine using https://github.com/NadalChi/AML.git"
+    "* Clone the repo to your local machine using https://github.com/NadalChi/AML.git"
    ]
   },
   {
@@ -36,8 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download model\n",
-    "Install this package first."
+    "- Install this package first."
    ]
   },
   {
@@ -61,7 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Under folder /code, run the following command. Or just run download_model.py"
+    "## Download model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Run the following command. Or under folder AML/code, then run download_model.py"
    ]
   },
   {
@@ -90,10 +96,10 @@
    "metadata": {},
    "source": [
     "## Load sample data\n",
-    "Load sample data from data set.  \n",
-    "You can choose any data you want between 1.txt to 5023.txt.  \n",
-    "For example, if you want to load single data set 10.txt, then you can call function as `aml.load_smaple_data(10)`.  \n",
-    "The implement result shows as below."
+    "* Load sample data from data set.  \n",
+    "* You can choose any data you want between 1.txt to 5023.txt.  \n",
+    "* For example, if you want to load single data set 10.txt, then you can call function as `aml.load_smaple_data(10)`.  \n",
+    "* The implement result shows as below."
    ]
   },
   {
@@ -125,9 +131,9 @@
    "metadata": {},
    "source": [
     "## Process data\n",
-    "As we have the sample data and the lables. We have to convert each word in sample data to token.  \n",
-    "And give each word a lable. What we are doing is classification. If the word belongs to AML-related focal persons. We set the label to one else we set it to zero.  \n",
-    "The implement result shows as below."
+    "* As we have the sample data and the lables. We have to convert each word in sample data to token.  \n",
+    "* And give each word a lable. What we are doing is classification. If the word belongs to AML-related focal persons. We set the label to one else we set it to zero.  \n",
+    "* The implement result shows as below."
    ]
   },
   {
@@ -255,8 +261,8 @@
    "metadata": {},
    "source": [
     "## Train model\n",
-    "Create training set and validation set.  \n",
-    "The model will saved under folder '~/model'."
+    "* Create training set and validation set.  \n",
+    "* The model will saved under folder '~/model'."
    ]
   },
   {
@@ -282,9 +288,9 @@
    "metadata": {},
    "source": [
     "## Load model\n",
-    "The model we provide was trained by using 1.txt to 4000.txt from data set.  \n",
-    "Load the model we downloaded at begin. The path was set equal to '../model/finetuned_token_cls_model'.  \n",
-    "You can also load the path where your model at.  "
+    "* The model we provide was trained by using 1.txt to 4000.txt from data set.  \n",
+    "* Load the model we downloaded at begin. The path was set equal to '../model/finetuned_token_cls_model'.  \n",
+    "* You can also load the path where your model at.  "
    ]
   },
   {
@@ -313,8 +319,8 @@
    "metadata": {},
    "source": [
     "## Inference\n",
-    "If you are doing inference. First argument is the article you are going to inference. Second argument is the model you loaded.  \n",
-    "The inference result shows as below."
+    "* If you are doing inference. First argument is the article you are going to inference. Second argument is the model you loaded.  \n",
+    "* The inference result shows as below."
    ]
   },
   {
@@ -358,13 +364,6 @@
     "text = aml.load_smaple_data(4802)[1]\n",
     "aml.inference(text, model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
