--- a/code/AML.ipynb
+++ b/code/AML.ipynb
@@ -203,7 +203,7 @@
    "source": [
     "## Train model\n",
     "* Create training set and validation set.  \n",
-    "* The model will saved under folder '~/model'."
+    "* The model will saved under folder `'~/model'`."
    ]
   },
   {
@@ -230,7 +230,7 @@
    "source": [
     "## Load model\n",
     "* The model we provide was trained by using 1.txt to 4000.txt from data set.  \n",
-    "* Load the model we downloaded at begin. The path was set equal to '../model/finetuned_token_cls_model'.  \n",
+    "* Load the model we downloaded at begin. The path was set equal to `'../model/finetuned_token_cls_model'`.  \n",
     "* You can also load the path where your model at.  "
    ]
   },
