--- a/code/AML.ipynb
+++ b/code/AML.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a tutorial using NLP algorithm to determine whether the article contains AML-related focal persons.  \n",
+    "Follow the steps below. You will be able to test your own articles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Installation\n",
     "* Clone the repo to your local machine using https://github.com/NadalChi/AML.git"
    ]
